--- a/DoubleFlurorescentStrainAnalysis.Rmd
+++ b/DoubleFlurorescentStrainAnalysis.Rmd
@@ -85,7 +85,9 @@ requireInstall <- function(packageName,isBioconductor=F) {
 #Load libraries
 requireInstall("openCyto",isBioconductor=T)
 requireInstall("ggcyto",isBioconductor=T)
+requireInstall("gridExtra",isBioconductor=T)
 requireInstall("tidyverse")
+
 ```
 
   
@@ -101,13 +103,14 @@ dir = '.'
 path.data = paste(getwd(),"/",sep="")
 
 #fcs run sample name
-name = "Test"
+name1 = "Accuri_Run"
+name2 = "Aria_Run"
 
 #fcs data to extract
 extract.FSC_A <- "Yes"
 extract.SSC_A <- "Yes"
 extract.FL1_A <- "Yes"
-extract.FL2_A <- "No"
+extract.FL2_A <- "Yes"
 extract.FL3_A <- "No"
 extract.FL4_A <- "No" 
 extract.FSC_H <- "No"
@@ -123,18 +126,13 @@ extract.Time  <- "No"
 sample.param <- data.frame(SAMPLE=NA, WELL=NA, STRAIN=NA, GENOTYPE=NA, PLOIDY=NA, MEDIA=NA, EXPERIMENT=NA)
 
 #style of output
-#Proportional Data
-save.prop <- "Yes"
 #FlowSet
 save.flowset <- "No"
 #filename
-folder.flowset <-  paste(name, 'flowdata', Sys.Date(), sep = '_')
+folder.flowset <-  paste('DF_Strain_flowdata', Sys.Date(), sep = '_')
 #DataFrame - Individual data points
 save.df <- "Yes"
-file.df <- paste(name, 'df', Sys.Date(), sep = '_')
-#DataFrame - Experiment Statistics
-save.stats <- "Yes"
-file.stats <- paste(name, 'stats', Sys.Date(), sep = '_')
+file.df <- paste('DF_Strain_df', Sys.Date(), sep = '_')
 
 ```
 
@@ -157,40 +155,67 @@ Need to define names
 
 
 ```{r}
+#Accuri Data
 #Reads in samplesheet
-sample.sheet <- read.csv(paste(path.data,"samplesheet_",name,".csv", sep=""))
-#get/set samplesheet parameters, overwrites default
-#!!!! REMEMBER TO ADJUST THE CODE SO THAT THE PARAMETERS MATCH THOSE THAT YOU ADD TO THE PDATA, TO THE EXTRATCED DATA, AND TO THE DATA 
-sample.param <- as_tibble(matrix(nrow=0, ncol = ncol(sample.sheet)))
-colnames(sample.param) <- colnames(sample.sheet)
+sample.sheet1 <- read.csv(paste(path.data,"samplesheet_",name1,".csv", sep=""))
 
 #reads in FCS files in order outliined in samplesheet
-files <- paste(path.data,name,"/",sort(factor(list.files(paste(path.data,name,"/", sep=""),full.names=FALSE), levels = paste(sample.sheet$Well,".fcs",sep="" ), ordered=TRUE)),sep="")
-flowData <- read.ncdfFlowSet(files=files, pattern=".fcs", alter.names = TRUE)
+files <- paste(path.data,name1,"/",sort(factor(list.files(paste(path.data,name1,"/", sep=""),full.names=FALSE), levels = paste(sample.sheet1$Well,".fcs",sep="" ), ordered=TRUE)),sep="")
+flowData1 <- read.flowSet(files=files, pattern=".fcs", column.pattern="FSC.A|SSC.A|FL1.A|FL2.A", alter.names = TRUE)
 
 
 #Adds a sample sheet data to the pData of the flowset
 #Defines the sample name in the two places needed for the flowframe
 #sampleNames must be unique and is used by flowframe to differenate between flowframes
 #pData()$name is used as a defualt value in many of the functions used to display FCS data
-sampleNames(flowData) <- paste(gsub(" ","_",sample.sheet$Strain),"_",sub(" ","_",sample.sheet$Well), sep="")
-pData(flowData)$name <- sampleNames(flowData)
+sampleNames(flowData1) <- paste(gsub(" ","_",sample.sheet1$Strain),"_",sub(" ","_",sample.sheet$Well), sep="")
+pData(flowData1)$name <- sampleNames(flowData1)
+
+
+#Additional samplesheet parameters added to the the FlowSet
+pData(flowData1)$Well <- sample.sheet1$Well
+pData(flowData1)$Strain <- sample.sheet1$Strain
+pData(flowData1)$Genotype <- sample.sheet1$Genotype
+pData(flowData1)$Ploidy <- sample.sheet1$Ploidy
+pData(flowData1)$Media <- sample.sheet1$Media
+pData(flowData1)$Experiment <- sample.sheet1$Experiment
+
+
+#Aria Data
+
+
+#Reads in samplesheet
+sample.sheet2 <- read.csv(paste(path.data,"samplesheet_",name2,".csv", sep=""))
+
+map <- data.frame(alias = c("FL1.A", "FL2.A"), channels = c("FITC-A", "mCherry-A"))
+
+#reads in FCS files in order outliined in samplesheet
+files <- paste(path.data,name2,"/",sort(factor(list.files(paste(path.data,name2,"/", sep=""),full.names=FALSE), levels = paste(sample.sheet2$Well,".fcs",sep="" ), ordered=TRUE)),sep="")
+flowData2 <- read.flowSet(files=files, pattern=".fcs", channel_alias = map, alter.names = TRUE)
+flowData2 <- read.flowSet(files=files, pattern=".fcs", column.pattern="FSC.A|SSC.A|FL1.A|FL2.A", channel_alias = map, alter.names = TRUE)
+
+
+#Adds a sample sheet data to the pData of the flowset
+#Defines the sample name in the two places needed for the flowframe
+#sampleNames must be unique and is used by flowframe to differenate between flowframes
+#pData()$name is used as a defualt value in many of the functions used to display FCS data
+sampleNames(flowData2) <- paste(gsub(" ","_",sample.sheet2$Strain),"_",sub(" ","_",sample.sheet2$Well), sep="")
+pData(flowData2)$name <- sampleNames(flowData2)
 
 
 #Additional samplesheet parameters added to the the FlowSet
 #!!!! REMEMBER THAT YOU NEED TO MAKE SURE THESE MATCH YOUR SAMPLESHEET PARAMETERS
-pData(flowData)$Well <- sample.sheet$Well
-pData(flowData)$Strain <- sample.sheet$Strain
-pData(flowData)$Genotype <- sample.sheet$Genotype
-pData(flowData)$Ploidy <- sample.sheet$Ploidy
-pData(flowData)$Media <- sample.sheet$Media
-pData(flowData)$Experiment <- sample.sheet$Experiment
+pData(flowData2)$Well <- sample.sheet2$Well
+pData(flowData2)$Strain <- sample.sheet2$Strain
+pData(flowData2)$Genotype <- sample.sheet2$Genotype
+pData(flowData2)$Ploidy <- sample.sheet2$Ploidy
+pData(flowData2)$Media <- sample.sheet2$Media
+pData(flowData2)$Experiment <- sample.sheet2$Experiment
 
-
-#Load Gates
-load(file = "gates.RData")
+flowData <- rbind2(flowData1, flowData2)
 
 ```
+
 
 ** Base Summary **
 Just checks to make sure you collected the amount of data you thought you did, as well as gathering the actual number of counts in each sample and the number of samples to be used in later chunks.
@@ -219,25 +244,17 @@ END
 ```{r Application of Gates}
 ##Subset the data by applying sequential gates##
 
+filteredData <- flowData
+
 #apply doublet gate to ALL SAMPLES
-flowData.singlets <- Subset(flowData, pg.singlets) 
-singlets <- fsApply(flowData.singlets, each_col, length)[1:samples.num]
-print(singlets)
+#flowData.singlets <- Subset(flowData, pg.singlets) 
+#singlets <- fsApply(flowData.singlets, each_col, length)[1:samples.num]
+#print(singlets)
 
 #apply debris gates
-filteredData <- Subset(flowData.singlets, pg.nondebris) 
-non.debris <- fsApply(filteredData, each_col, length)[1:samples.num]
-print(non.debris)
-
-#this gate defines nonFL1 cells
-flone.neg <- Subset(filteredData, pg.nonflone) 
-flone.neg.cells <- fsApply(flone.neg, each_col, length)[1:samples.num]
-print(flone.neg.cells)
-
-#this gate defines flouresecent cells
-flone.pos <- Subset(filteredData, pg.flone) 
-flone.pos.cells <- fsApply(flone.pos, each_col, length)[1:samples.num]
-print(flone.pos.cells)
+#filteredData <- Subset(flowData.singlets, pg.nondebris) 
+#non.debris <- fsApply(filteredData, each_col, length)[1:samples.num]
+#print(non.debris)
 
 ```
 
@@ -245,7 +262,7 @@ print(flone.pos.cells)
 #Note that you may need to adjust the axis, the bin size, and the number cols and rows, and the number of fluorescent gates in order to produce the best visulatization for your data
 
 ##Gates
-```{r}
+```{r eval=FALSE}
 
 #Singlets gate
 ggcyto(flowData, aes(x = `FSC.H`, y =  `FSC.A`)) + geom_hex(bins = 512) +  xlim(0,3e6) + ylim(0,3e6) + geom_gate(pg.singlets) + facet_wrap(~name, ncol = 8, nrow = 4) + ggtitle("First flowset - singlets gate")
@@ -254,48 +271,8 @@ ggcyto(flowData, aes(x = `FSC.H`, y =  `FSC.A`)) + geom_hex(bins = 512) +  xlim(
 
 ggcyto(flowData, aes(x = `FSC.A`, y =  `SSC.A`)) + geom_hex(bins = 512) +  xlim(0,2e6) + ylim(0,5e5) + geom_gate(pg.nondebris) + facet_wrap(~name, ncol = 8, nrow = 4) + ggtitle("First flowset - nondebris gate")
 
-#Non-fluorescent population gate
-
-ggcyto(flowData, aes(x = `FSC.A`, y =  `FL1.A`)) + geom_hex(bins = 512) +  xlim(0,1e6) + ylim(0,3e5) + geom_gate(fl1gate.0) + facet_wrap(~name, ncol = 8, nrow = 4) + ggtitle("First flowset - non GFP gate")
-
-#1 copy Fluorescent population gate
-ggcyto(flowData, aes(x = `FSC.A`, y =  `FL1.A`)) + geom_hex(bins = 512) +  xlim(0,1e6) + ylim(0,3e5) + geom_gate(fl1gate.1) + facet_wrap(~name, ncol = 8, nrow = 4) + ggtitle("First flowset - GFP gate")
-
-#2 copy fluorescing gate
-ggcyto(flowData, aes(x = `FSC.A`, y =  `FL1.A`)) + geom_hex(bins = 512) +  xlim(0,1e6) + ylim(0,3e5) + geom_gate(fl1gate.2) + facet_wrap(~name, ncol = 8, nrow = 4) + ggtitle("First flowset - high GFP gate")
-
-#3+ copy fluorescing gate
-ggcyto(flowData, aes(x = `FSC.A`, y =  `FL1.A`)) + geom_hex(bins = 512) +  xlim(0,1e6) + ylim(0,3e5) + geom_gate(fl1gate.3) + facet_wrap(~name, ncol = 8, nrow = 4) + ggtitle("First flowset - high GFP gate")
-
 ```
 
-##Data transformation for visualization
-```{r}
-#In order to look at QC plots the data is transformed using the logicle transform, which is a log transform for high values that transitions to a linear transformation near zero values 
-#This is simply for visualization purposes
-
-lgcl <- logicleTransform(w = 0.5, t= 10000, m=4.5) #the parameters w,t, and m define the transformation parameters
-
-#Dataset 1 tranformation applied to every channel except width and time
-dataLGCLTransform <- transform(filteredData, 'FSC.A' = lgcl(`FSC.A`), 'SSC.A' =lgcl(`SSC.A`), 'FL1.A' = lgcl(`FL1.A`), 'FL2.A' = lgcl(`FL2.A`), 'FL3.A' = lgcl(`FL3.A`), 'FL4.A' = lgcl(`FL4.A`),'FSC.H' = lgcl(`FSC.H`),'SSC.H' = lgcl(`SSC.H`),'FL1.H' = lgcl(`FL1.H`),'FL2.H' = lgcl(`FL2.H`),'FL3.H' = lgcl(`FL3.H`),'FL4.H' = lgcl(`FL4.H`)) 
-
-```
-
-##Effect of time
-```{r}
-#The effect of time on signal (of which there shouldn't be any)
-ggcyto(dataLGCLTransform, aes(x = `Time`, y =  `FL1.A`)) + geom_hex(bins = 128) +  xlim(150,250) + ylim(0,8)+facet_wrap(~name, ncol = 8, nrow = 4)
-```
-
-##Plots of FL1 versus FSC
-```{r}
-ggcyto(dataLGCLTransform, aes(x = `FSC.A`, y =  `FL1.A`)) + geom_hex(bins = 512) +  xlim(4,8) + ylim(2,6) + facet_wrap(~name, ncol = 8, nrow = 4)
-```
-
-##Plots of FSC versus SSC
-```{r}
-ggcyto(dataLGCLTransform, aes(x = `FSC.A`, y =  `SSC.A`)) + geom_hex(bins = 512) +  xlim(4,8) + ylim(4,8)+facet_wrap(~name, ncol = 8, nrow = 4)
-```
 
 
 **Data Extraction**
@@ -303,6 +280,7 @@ Extracts the data you want based on your selections in the user defined variable
 Also remember you need to make sure your samplesheet paramters match with the parameters you wanted in your extracted data file
 
 ```{r Data extraction}
+
 
 #Move filtered data into a dataframe
 #Create the empty data frame
@@ -323,7 +301,6 @@ if(extract.Width == "Yes"){filtered.data<-cbind(filtered.data, Width=NA)}
 if(extract.Time == "Yes"){filtered.data<-cbind(filtered.data, Time=NA)}
 
 #Fill the data frame with the data you want
-#!!!! REMEMBER THAT YOU NEED TO MAKE SURE YOUR SAMPLESHEET PARAMATERS ARE INCLUDED IN THIS CODE
 for(i in 1:length(filteredData)){
   sample <- sampleNames(filteredData)[i]
   well <- as.character(pData(filteredData)$Well[i])
@@ -382,192 +359,29 @@ for(i in 1:length(filteredData)){
   if(extract.Time == "Yes"){filtered.data$Time<-as.numeric(filtered.data$Time)}
 ```
 
-**Summary Statistics**
-Creates a set od statistics that summarize your data. You will need to make sure to adjust the code depending on the data and statistics you want summarized
-Also remember you need to make sure your samplesheet paramters match with the parameters you wanted in your extracted data file
+***Plots***
 
-```{r Summary Statistics}
-#Create the empty data frame
-# !!!! REMEMBER YOU MAY NEED TO ADD OR REMOVE STATISTIC COLUMNS BASED ON WHAT YOUR NEEDS ARE !!!!
-stats.data <- cbind(sample.param,COUNT=NA,FSC_MEDIAN=NA,FSC_MEAN=NA,FSC_SD=NA,FL1_MEDIAN=NA,FL1_MEAN=NA,FL1_SD=NA,NORMALIZED_GFP_MEDIAN=NA,NORMALIZED_GFP_MEAN=NA,NORMALIZED_GFP_SD=NA)
-
-#Fill the data frame with the data you want
-#!!!! REMEMBER THAT YOU NEED TO MAKE SURE YOUR SAMPLESHEET PARAMATERS ARE INCLUDED IN THIS CODE AND THAT YOU MAY NEED TO ADD OR REMOVE STATISTIC COLUMNS BASED ON WHAT YOUR NEEDS ARE !!!!
- for(i in 1:length(filteredData)){
-  sample <- sampleNames(filteredData)[i]
-  well <- as.character(pData(filteredData)$Well[i])
-  strain <- as.character(pData(filteredData)$Strain[i])
-  genotype <- as.character(pData(filteredData)$Genotype[i])
-  ploidy <- as.character(pData(filteredData)$Ploidy[i])
-  media <- as.character(pData(filteredData)$Media[i])
-  exp <- as.character(pData(filteredData)$Experiment[i])
-  if(extract.FSC_A == "Yes"){fsc.a <- exprs(filteredData[[i,1]])}
-  if(extract.SSC_A == "Yes"){ssc.a <- exprs(filteredData[[i,2]])}
-  if(extract.FL1_A == "Yes"){fl1.a <- exprs(filteredData[[i,3]])}
-  if(extract.FL2_A == "Yes"){fl2.a <- exprs(filteredData[[i,4]])}
-  if(extract.FL3_A == "Yes"){fl3.a <- exprs(filteredData[[i,5]])}
-  if(extract.FL4_A == "Yes"){fl4.a <- exprs(filteredData[[i,6]])}
-  if(extract.FSC_H == "Yes"){fsc.h <- exprs(filteredData[[i,7]])}
-  if(extract.SSC_H == "Yes"){ssc.h <- exprs(filteredData[[i,8]])}
-  if(extract.FL1_H == "Yes"){fl1.h <- exprs(filteredData[[i,9]])}
-  if(extract.FL2_H == "Yes"){fl2.h <- exprs(filteredData[[i,10]])}
-  if(extract.FL3_H == "Yes"){fl3.h <- exprs(filteredData[[i,11]])}
-  if(extract.FL4_H == "Yes"){fl4.h <- exprs(filteredData[[i,12]])}
-  if(extract.Width == "Yes"){width <- exprs(filteredData[[i,11]])}
-  if(extract.Time == "Yes"){time <- exprs(filteredData[[i,12]])}
- 
-  stats.data<-(rbind(stats.data,cbind(SAMPLE=sample,WELL=well,STRAIN=strain,GENOTYPE=genotype,PLOIDY=ploidy,MEDIA=media,EXPERIMENT=exp,COUNT=length(fsc.a),FSC_MEDIAN=median(fsc.a),FSC_MEAN=mean(fsc.a),FSC_SD=sd(fsc.a),FL1_MEDIAN=median(fl1.a),FL1_MEAN=mean(fl1.a),FL1_SD=sd(fl1.a),NORMALIZED_GFP_MEDIAN=median(fl1.a/fsc.a),NORMALIZED_GFP_MEAN=mean(fl1.a/fsc.a),NORMALIZED_GFP_SD=sd(fl1.a/fsc.a))))
- }  
-
-#Cleans up DataFrames
-stats.data<-stats.data[2:nrow(stats.data),]
-stats.data$COUNT<-as.numeric(stats.data$COUNT)
-stats.data$FSC_MEDIAN<-as.numeric(stats.data$FSC_MEDIAN)
-stats.data$FSC_MEAN<-as.numeric(stats.data$FSC_MEAN)    
-stats.data$FSC_SD<-as.numeric(stats.data$FSC_SD)
-stats.data$FL1_MEDIAN<-as.numeric(stats.data$FL1_MEDIAN)
-stats.data$FL1_MEAN<-as.numeric(stats.data$FL1_MEAN)    
-stats.data$FL1_SD<-as.numeric(stats.data$FL1_SD)
-stats.data$NORMALIZED_GFP_MEDIAN<-as.numeric(stats.data$NORMALIZED_GFP_MEDIAN)
-stats.data$NORMALIZED_GFP_MEAN<-as.numeric(stats.data$NORMALIZED_GFP_MEAN)    
-stats.data$NORMALIZED_GFP_SD<-as.numeric(stats.data$NORMALIZED_GFP_SD)
-```
-
-
-#Plots
-```{r Desnity Plots}
-ggplot(filtered.data)+
-      geom_density(aes(x = FSC.A), colour = "black")+
-      theme()+
-      labs(y = "Counts", x = "FSC.A") +
-      scale_x_log10()+
-      facet_wrap('SAMPLE')
-
-
-ggplot(filtered.data )+
-      geom_density(aes(x = FL1.A), colour = "green")+
-      theme()+
-      labs(y = "Counts", x = "FL1.A") +
-      scale_x_log10()+
-      facet_wrap('SAMPLE')
-
-ggplot(filtered.data )+
-      geom_density(aes(x = FL1.A/FSC.A), colour = "blue")+
-      theme()+
-      labs(y = "Counts",x = "FL1.A/FSC.A") +
-      scale_x_log10()+
-      facet_wrap('SAMPLE')
-
-
-```
-
-```{r Data Distribution Plots}
-ggplot(filtered.data, aes(SAMPLE,FSC.A)) +
-    theme_bw() +
-    theme(axis.text.x = element_text(angle = 90,vjust=0.5,hjust = 1, size = 6)) +
-    stat_boxplot(geom ='errorbar', colour = "grey") +
-    geom_boxplot(outlier.shape = NA, colour = "grey") +
-    #geom_hline(yintercept=haploid.fsc, lty=2, colour = "black") +
-    #geom_hline(yintercept=diploid.fsc, lty=2, colour = "blue") +
-    scale_y_log10()+
-    scale_x_discrete(labels=levels(filtered.data$SAMPLE))
-
-ggplot(filtered.data, aes(SAMPLE,FL1.A)) +
-    theme_bw() +
-    theme(axis.text.x = element_text(angle = 90,vjust=0.5,hjust = 1, size = 6)) +
-    stat_boxplot(geom ='errorbar', colour = "lightgreen") +
-    geom_boxplot(outlier.shape = NA, colour = "lightgreen") +
-    #geom_hline(yintercept=gfp.bg, lty=2, colour = "yellow") +
-    #geom_hline(yintercept=gfp.wt, lty=2, colour = "green") +
-    labs(title= paste("FL1.A", sep="")) +
-    scale_y_log10()+
-    scale_x_discrete(labels=levels(filtered.data$SAMPLE))
-
-ggplot(filtered.data, aes(SAMPLE,FL1.A/FSC.A)) +
-    theme_bw() +
-    theme(axis.text.x = element_text(angle = 90,vjust=0.5,hjust = 1, size = 6)) +
-    stat_boxplot(geom ='errorbar', colour = "green") +
-    geom_boxplot(outlier.shape = NA, colour = "green") +
-    #geom_hline(yintercept=gfp.norm, lty=2, colour = "blue") +
-    scale_y_log10()+
-    scale_x_discrete(labels=levels(filtered.data$SAMPLE))
-```
-
-```{r Quantitation of Signal}
-
-###FL1###
-baseline.FL1 <- stats.data$FL1_MEDIAN[] #MUST REPLACE WITH YOUR FL1 ChannelCONTROL!!
-ggplot(stats.data,aes(x=SAMPLE, y = FL1_MEDIAN/baseline.FL1)) +
-  geom_col() +
-  theme_bw() +
-  theme(axis.text.x = element_text(angle = 90,vjust=0.5,hjust = 1, size = 6)) +
-  scale_x_discrete(labels=stats.data$SAMPLE)+
-  ylab("Relative FL1 Median Expression")
-
-###FSC###
-baseline.FSC <- stats.data$FSC_MEDIAN[1] #MUST REPLACE WITH YOUR FSC Channel non-flourescense CONTROL!!
-ggplot(stats.data,aes(x=SAMPLE, y = FSC_MEDIAN/baseline.FL1)) +
-  geom_col() +
-  theme_bw() +
-  theme(axis.text.x = element_text(angle = 90,vjust=0.5,hjust = 1, size = 6)) +
-  scale_x_discrete(labels=stats.data$SAMPLE)+
-  ylab("Relative Median FSC")
-```
-
-#Repupose Barplots into normal plot ourput flow
 ```{r}
-ggplot(stats.data,aes(x=SAMPLE, y = singlets/total)) +
-  geom_col() +
-  theme_bw() +
-  theme(axis.text.x = element_text(angle = 90,vjust=0.5,hjust = 1, size = 6)) +
-  scale_x_discrete(labels=stats.data$SAMPLE)+
-  ylab("Proportion Singlet Cells")
+for(i in 1:length(flowData)){
+fvs <- ggplot(flowData[i])+
+  geom_hex(aes(x = `FSC.A`, y =  `SSC.A`), bins = 512) + scale_x_log10() + scale_y_log10() + theme_classic() + theme(legend.position="none")
+fvf1 <- ggplot(flowData[i])+
+  geom_hex(aes(x = `FSC.A`, y =  `FL1.A`), bins = 512) + scale_x_log10() + scale_y_log10() + theme_classic() + theme(legend.position="none")
+fvf2 <- ggplot(flowData[i])+
+  geom_hex(aes(x = `FSC.A`, y =  `FL2.A`), bins = 512) + scale_x_log10() + scale_y_log10() + theme_classic() + theme(legend.position="none")
+f1vf2 <- ggplot(flowData[i])+
+  geom_hex(aes(x = `FL1.A`, y =  `FL2.A`), bins = 512) + scale_x_log10() + scale_y_log10() + theme_classic() + theme(legend.position="none")
+f1 <- ggplot(flowData[i])+
+  geom_density(aes(x = `FL1.A`, y=..count..)) + scale_x_log10() + theme_classic()
+f2 <- ggplot(flowData[i])+
+  geom_density(aes(x = `FL2.A`, y=..count..)) + scale_x_log10() + theme_classic()
 
-ggplot(stats.data,aes(x=SAMPLE, y = non.debris/total)) +
-  geom_col() +
-  theme_bw() +
-  theme(axis.text.x = element_text(angle = 90,vjust=0.5,hjust = 1, size = 6)) +
-  scale_x_discrete(labels=stats.data$SAMPLE)+
-  ylab("Proportion Non-debris Cells")
+grid.arrange(fvs, f1vf2, fvf1,fvf2, f1, f2, ncol=2, top=as.character(pData(flowData[i])$Genotype))
+}
 
-ggplot(stats.data,aes(x=SAMPLE, y = flone.neg/non.debris)) +
-  geom_col() +
-  theme_bw() +
-  theme(axis.text.x = element_text(angle = 90,vjust=0.5,hjust = 1, size = 6)) +
-  scale_x_discrete(labels=stats.data$SAMPLE)+
-  ylab("Proportion Cells with no Flourescense")
 
-ggplot(stats.data,aes(x=SAMPLE, y = flone.pos.cells/non.debris)) +
-  geom_col() +
-  theme_bw() +
-  theme(axis.text.x = element_text(angle = 90,vjust=0.5,hjust = 1, size = 6)) +
-  scale_x_discrete(labels=stats.data$SAMPLE)+
-  ylab("Proportion cells with Flourescense")
 ```
 
-##Population Composition
-#Currently Designed for LTEE experiments
-#You may need to remove or modify this based on your experiments needs
-```{r Population composition}
-
-PopProportion_zeroGFP <- flone.neg.cells/non.debris
-PopProportion_oneGFP <- flone.one.cells/non.debris
-PopProportion_twoGFP <- flone.two.cells/non.debris
-PopProportion_threeGFP <- flone.three.cells/non.debris
-prop.data <- cbind(stats.data, PopProportion_zeroGFP, PopProportion_oneGFP, PopProportion_twoGFP, PopProportion_threeGFP, non.debris)
-colnames(prop.data) <- c(colnames(stats.data), "PopProp_0copy", "PopProp_1copy", "PopProp_2copy", "PopProp_3plus", "CELL COUNT")
-
-prop.data %>% 
-  select(SAMPLE,PopProp_3plus,PopProp_0copy,PopProp_1copy,PopProp_2copy) %>% 
-  gather(key="GFP_NUMBER",value="SIGNAL",-SAMPLE) %>%
-  ggplot(aes(fill=factor(GFP_NUMBER, levels = c("PopProp_3plus", "PopProp_2copy", "PopProp_1copy", "PopProp_0copy")), y=SIGNAL, x=SAMPLE)) +
-    geom_bar(stat="identity") +
-    scale_fill_manual(values=c("dark green","light green","grey","black")) +
-    theme_bw() +
-    theme(axis.text.x = element_text(angle = 90,vjust=0.5,hjust = 1, size = 6)) +
-    ylab("Proportion cells with Flourescense") +
-    theme(legend.title=element_blank())
-```
 
 
 ** Saving Data **
@@ -581,11 +395,6 @@ if(save.flowset == "Yes"){write.flowSet(flowData, folder.flowset)}
 #The data extracted from the flowset
 if(save.df == "Yes"){save(filtered.data, file=paste(file.df,".Rdata",sep=""))}
 
-#The summarized data extracted from the flowset
-if(save.stats== "Yes"){write.csv(stats.data, file= paste(file.stats,".csv",sep=""), row.names=TRUE quote=F)}
-
-#The population proportion data from your flowset
-if(save.prop == "Yes"){write.csv(prop.data, file=paste(file.prop,".csv",sep=""), row.names=TRUE quote=F)}
 ```
 
 
