--- a/DoubleFlurorescentStrainAnalysis.Rmd
+++ b/DoubleFlurorescentStrainAnalysis.Rmd
@@ -396,17 +396,17 @@ f1vf2 <- list()
 f1 <- list()
 f2 <- list()
   
-
+flowData <- subset(flowData, pData(flowData)$Strain=="FY4")
 
 for(i in 1:length(flowData)){
 fvs[[i]] <- ggplot(filter(filtered.data, SAMPLE==sampleNames(flowData)[i]))+
   geom_hex(aes(x = FSC.A, y =  SSC.A), bins = 128) + scale_x_log10() + scale_y_log10() + theme_classic() + theme(legend.position="none")
 fvf1[[i]] <- ggplot(filter(filtered.data, SAMPLE==sampleNames(flowData)[i]))+
-  geom_hex(aes(x = FSC.A, y =  FL1.A), bins = 128) + scale_x_log10() + scale_y_log10() + theme_classic() + theme(legend.position="none")
+  geom_hex(aes(x = FSC.A, y =  FL1.A), bins = 128) + scale_y_continuous(trans="log10",limits=c(1e0,1e6))+ scale_x_continuous(trans="log10") + theme_classic() + theme(legend.position="none")
 fvf2[[i]] <- ggplot(filter(filtered.data, SAMPLE==sampleNames(flowData)[i]))+
-  geom_hex(aes(x = FSC.A, y =  FL2.A), bins = 128) + scale_x_log10() + scale_y_log10() + theme_classic() + theme(legend.position="none")
+  geom_hex(aes(x = FSC.A, y =  FL2.A), bins = 128) + scale_y_continuous(limits=c(0,1e4))+ scale_x_continuous(limits=c(0,1e7))+ scale_x_log10() + scale_y_log10() + theme_classic() + theme(legend.position="none")
 f1vf2[[i]] <- ggplot(filter(filtered.data, SAMPLE==sampleNames(flowData)[i]))+
-  geom_hex(aes(x = FL1.A, y =  FL2.A), bins = 128) + scale_x_log10() + scale_y_log10() + theme_classic() + theme(legend.position="none")
+  geom_hex(aes(x = FL1.A, y =  FL2.A), bins = 128) + scale_y_continuous(limits=c(0,1e4))+ scale_x_continuous(limits=c(0,1e6))+ scale_x_log10() + scale_y_log10() + theme_classic() + theme(legend.position="none")
 f1[[i]] <- ggplot(filter(filtered.data, SAMPLE==sampleNames(flowData)[i]))+
   geom_density(aes(x = FL1.A, y=..count..)) + scale_x_log10() + theme_classic()
 f2[[i]] <- ggplot(filter(filtered.data, SAMPLE==sampleNames(flowData)[i]))+
